-
Bug
-
Resolution: Fixed
-
P3
-
openjdk8u, 9, 10
-
b10
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8317869 | 11.0.22-oracle | Ivan Bereziuk | P3 | Resolved | Fixed | b03 |
http://mail.openjdk.java.net/pipermail/serviceability-dev/2018-July/024409.html
java.lang.IllegalArgumentException: committed = 542113792 should be <
max = 536870912
at java.lang.management.MemoryUsage.<init>(MemoryUsage.java:166)
at sun.management.MemoryImpl.getMemoryUsage0(Native Method)
at sun.management.MemoryImpl.getHeapMemoryUsage(MemoryImpl.java:71)
at org.elasticsearch.indices.breaker.HierarchyCircuitBreakerService.currentMemoryUsage(HierarchyCircuitBreakerService.java:246)
[...]
The values reported in the exception message are:
* "max": 536870912 = 512MB (exactly)
* "committed": 542113792 = 517MB (exactly), i.e. 5MB more than "max".
As the value of "max" is exactly what we have specified with -Xmx this indicates to me that the problem seems to be the calculation of "committed".
As the value of "max" is exactly what we have specified with -Xmx it seems to
indicate that the problem is the calculation of "committed". I do not
understand under which conditions this can happen thus I post this to the
mailing list in case anybody has ideas what might cause this.
java.lang.IllegalArgumentException: committed = 542113792 should be <
max = 536870912
at java.lang.management.MemoryUsage.<init>(MemoryUsage.java:166)
at sun.management.MemoryImpl.getMemoryUsage0(Native Method)
at sun.management.MemoryImpl.getHeapMemoryUsage(MemoryImpl.java:71)
at org.elasticsearch.indices.breaker.HierarchyCircuitBreakerService.currentMemoryUsage(HierarchyCircuitBreakerService.java:246)
[...]
The values reported in the exception message are:
* "max": 536870912 = 512MB (exactly)
* "committed": 542113792 = 517MB (exactly), i.e. 5MB more than "max".
As the value of "max" is exactly what we have specified with -Xmx this indicates to me that the problem seems to be the calculation of "committed".
As the value of "max" is exactly what we have specified with -Xmx it seems to
indicate that the problem is the calculation of "committed". I do not
understand under which conditions this can happen thus I post this to the
mailing list in case anybody has ideas what might cause this.
- backported by
-
JDK-8317869 Committed > max memory usage when getting MemoryUsage
-
- Resolved
-
- is blocked by
-
JDK-8209062 Clean up G1MonitoringSupport
-
- Resolved
-
- relates to
-
JDK-8219524 Shenandoah misreports "committed" size in MemoryMXBean
-
- Resolved
-
- links to
-
Review openjdk/jdk11u-dev/2281