8207200: Committed > max memory usage when getting MemoryUsage

Make sure that modification of memory usage variables are synchronized with returning them to Java.

Reviewed-by: sangheki, mchung